template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_opennms_rc_vm_name": {
            "defaultValue": "opennms-rc-vm",
            "type": "String"
        },
        "sshPublicKeys_opennms_rc_vm_key_name": {
            "defaultValue": "opennms-rc-vm_key",
            "type": "String"
        },
        "networkInterfaces_opennms_rc_vm736_name": {
            "defaultValue": "opennms-rc-vm736",
            "type": "String"
        },
        "publicIPAddresses_opennms_rc_vm_ip_name": {
            "defaultValue": "opennms-rc-vm-ip",
            "type": "String"
        },
        "networkSecurityGroups_opennms_rc_vm_nsg_name": {
            "defaultValue": "opennms-rc-vm-nsg",
            "type": "String"
        },
        "schedules_shutdown_computevm_opennms_rc_vm_name": {
            "defaultValue": "shutdown-computevm-opennms-rc-vm",
            "type": "String"
        },
        "virtualNetworks_opennms_rc_vnet_name": {
            "defaultValue": "virtualNetworks_opennms_rc_vnet",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "type": "Microsoft.Compute/sshPublicKeys",
            "apiVersion": "2021-11-01",
            "name": "[parameters('sshPublicKeys_opennms_rc_vm_key_name')]",
            "location": "northeurope",
            "tags": {
                "ProjectName": "opennms-poc-environment",
                "AssetTag": "opennms-poc"
            },
            "properties": {
                "publicKey": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCkLyyCp0yx5ZShk8TSEI3lWRAE\r\n4Qkn1Ev8KK+vI9PWFLAa70g4otV3USxdcV6cdHNFaE7OCEOUeSIAaHNf4KBd7kbP\r\nrcNSiNESZ7DlU8PsLCzbFFE4VWeezGgwJ+dPWmGQUw98tdMeQcCJMSGFc8U6C2gx\r\npwptRycMS+cOqzXZlikrIfqplplSgE6bw+VNJKNOA9OU1mHYbwEiNCOa0Jr1/nc+\r\ntJ7/itcTYY9/6fR41+Q/SBXwHrbUuCXoOpA/0DikMb0wEM9S38m93wgZ3x0cYyTB\r\nrjbMbSd6goBRE8i/NS5RZ4sW2tcLDeIwvqcyUuqBUcKSCjxxVhuy1AyH98HSRkfh\r\nqUzCpPluDJPO3qy2USPacHG0VpASai1W4H5WltUDdfXxLcbZ3UOnbEUBb6cX3y [...]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-11-01",
            "name": "[parameters('networkSecurityGroups_opennms_rc_vm_nsg_name')]",
            "location": "northeurope",
            "tags": {
                "ProjectName": "opennms-poc-environment",
                "AssetTag": "opennms-poc"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "AllowSSHHTTPRDPInBound",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "80.95.184.157",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [
                                "22",
                                "80",
                                "3389"
                            ],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2020-11-01",
            "name": "[parameters('publicIPAddresses_opennms_rc_vm_ip_name')]",
            "location": "northeurope",
            "tags": {
                "ProjectName": "opennms-poc-environment",
                "AssetTag": "opennms-poc"
            },
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "properties": {
                "ipAddress": "20.107.195.166",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "poc-opennms-rc-vm",
                    "fqdn": "poc-opennms-rc-vm.northeurope.cloudapp.azure.com"
                },
                "ipTags": []
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2020-11-01",
            "name": "[parameters('virtualNetworks_opennms_rc_vnet_name')]",
            "location": "northeurope",
            "tags": {
                "ProjectName": "opennms-poc-environment",
                "AssetTag": "opennms-poc"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "172.16.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "properties": {
                            "addressPrefix": "172.16.0.0/24",
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Enabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2021-11-01",
            "name": "[parameters('virtualMachines_opennms_rc_vm_name')]",
            "location": "northeurope",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_opennms_rc_vm736_name'))]"
            ],
            "tags": {
                "ProjectName": "opennms-poc-environment",
                "AssetTag": "opennms-poc"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_D2s_v3"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "canonical",
                        "offer": "0001-com-ubuntu-server-focal",
                        "sku": "20_04-lts-gen2",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('virtualMachines_opennms_rc_vm_name'), '_disk1_8e7443b32e2c41dea36a0667db74a5a9')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "StandardSSD_LRS"
                        },
                        "deleteOption": "Delete",
                        "diskSizeGB": 30
                    }
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_opennms_rc_vm_name')]",
                    "adminUsername": "[concat(parameters('virtualMachines_opennms_rc_vm_name'), '-user')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": true,
                        "ssh": {
                            "publicKeys": [
                                {
                                    "path": "[concat('/home/', parameters('virtualMachines_opennms_rc_vm_name'), '-user/.ssh/authorized_keys')]",
                                    "keyData": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCkLyyCp0yx5ZShk8TSEI3lWRAE\r\n4Qkn1Ev8KK+vI9PWFLAa70g4otV3USxdcV6cdHNFaE7OCEOUeSIAaHNf4KBd7kbP\r\nrcNSiNESZ7DlU8PsLCzbFFE4VWeezGgwJ+dPWmGQUw98tdMeQcCJMSGFc8U6C2gx\r\npwptRycMS+cOqzXZlikrIfqplplSgE6bw+VNJKNOA9OU1mHYbwEiNCOa0Jr1/nc+\r\ntJ7/itcTYY9/6fR41+Q/SBXwHrbUuCXoOpA/0DikMb0wEM9S38m93wgZ3x0cYyTB\r\nrjbMbSd6goBRE8i/NS5RZ4sW2tcLDeIwvqcyUuqBUcKSCjxxVhuy1AyH98HSRkfh\r\nqUzCpPluDJPO3qy2USPacHG0VpASai1W4H5WltUDdfXx [...]
                                }
                            ]
                        },
                        "provisionVMAgent": true,
                        "patchSettings": {
                            "patchMode": "ImageDefault",
                            "assessmentMode": "ImageDefault"
                        }
                    },
                    "secrets": [],
                    "allowExtensionOperations": true
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_opennms_rc_vm736_name'))]",
                            "properties": {
                                "deleteOption": "Delete"
                            }
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true
                    }
                }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "apiVersion": "2021-11-01",
            "name": "[concat(parameters('virtualMachines_opennms_rc_vm_name'), '/AzureNetworkWatcherExtension')]",
            "location": "northeurope",
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_opennms_rc_vm_name'))]"
            ],
            "tags": {
                "AssetTag": "opennms-poc"
            },
            "properties": {
                "autoUpgradeMinorVersion": true,
                "publisher": "Microsoft.Azure.NetworkWatcher",
                "type": "NetworkWatcherAgentLinux",
                "typeHandlerVersion": "1.4"
            }
        },
        {
            "type": "microsoft.devtestlab/schedules",
            "apiVersion": "2018-09-15",
            "name": "[parameters('schedules_shutdown_computevm_opennms_rc_vm_name')]",
            "location": "northeurope",
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_opennms_rc_vm_name'))]"
            ],
            "tags": {
                "ProjectName": "opennms-poc-environment",
                "AssetTag": "opennms-poc"
            },
            "properties": {
                "status": "Enabled",
                "taskType": "ComputeVmShutdownTask",
                "dailyRecurrence": {
                    "time": "1700"
                },
                "timeZoneId": "UTC",
                "notificationSettings": {
                    "status": "Enabled",
                    "timeInMinutes": 30,
                    "emailRecipient": "mmclarnon@nanthealth.com",
                    "notificationLocale": "en"
                },
                "targetResourceId": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_opennms_rc_vm_name'))]"
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2020-11-01",
            "name": "[concat(parameters('networkSecurityGroups_opennms_rc_vm_nsg_name'), '/AllowSSHHTTPRDPInBound')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_opennms_rc_vm_nsg_name'))]"
            ],
            "properties": {
                "protocol": "TCP",
                "sourcePortRange": "*",
                "sourceAddressPrefix": "80.95.184.157",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [
                    "22",
                    "80",
                    "3389"
                ],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2020-11-01",
            "name": "[concat(parameters('virtualNetworks_opennms_rc_vnet_name'), '/default')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_opennms_rc_vnet_name'))]"
            ],
            "properties": {
                "addressPrefix": "172.16.0.0/24",
                "delegations": [],
                "privateEndpointNetworkPolicies": "Enabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2020-11-01",
            "name": "[parameters('networkInterfaces_opennms_rc_vm736_name')]",
            "location": "northeurope",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_opennms_rc_vm_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_opennms_rc_vnet_name'), 'default')]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_opennms_rc_vm_nsg_name'))]"
            ],
            "tags": {
                "ProjectName": "opennms-poc-environment",
                "AssetTag": "opennms-poc"
            },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "172.16.0.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_opennms_rc_vm_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_opennms_rc_vnet_name'), 'default')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableAcceleratedNetworking": true,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_opennms_rc_vm_nsg_name'))]"
                }
            }
        }
    ]
}
